--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -137,13 +137,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ConsoleHelper.cs" />
-    <Compile Include="CrmOperationBase.cs" />
-    <Compile Include="ICrmOperation.cs" />
-    <Compile Include="PrincipalAccessOperations\PrincipalAccessOperation.cs" />
+    <Compile Include="CrmOperations\CrmOperationBase.cs" />
+    <Compile Include="CrmOperations\ICrmOperation.cs" />
+    <Compile Include="CrmOperations\PrincipalAccessOperations\PrincipalAccessOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserOperations\UserSecurityOperation.cs" />
-    <Compile Include="UserOperations\UserSettingsOperation.cs" />
+    <Compile Include="CrmOperations\UserOperations\UserSecurityOperation.cs" />
+    <Compile Include="CrmOperations\UserOperations\UserSettingsOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
