--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -136,6 +136,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrmOperations\CRUDOperations\BasicCRUDOperation.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="CrmOperations\CrmOperationBase.cs" />
     <Compile Include="CrmOperations\ICrmOperation.cs" />
@@ -154,6 +155,10 @@
     <ProjectReference Include="..\Crm.Common.CrmServiceHelper\Crm.Common.CrmService.csproj">
       <Project>{7a444857-bfb8-4824-9776-10e5dd92fba0}</Project>
       <Name>Crm.Common.CrmService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Crm.Common\Crm.Common.csproj">
+      <Project>{371d936f-3b6d-4383-bc6b-0ae0f1c57e43}</Project>
+      <Name>Crm.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
