#9 add FetchXml Aggregation Operations; add new common extension method public static T GetAliasedAttributeValue<T>(this Entity entity, string attributeName)

--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrmOperations\CRUDOperations\BasicCRUDOperation.cs" />
+    <Compile Include="CrmOperations\CRUDOperations\FetchXmlAggregationOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\FetchXmlOperations.cs" />
     <Compile Include="CrmOperations\CRUDOperations\RetrieveMultipleOperation.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
