--- a/ClientApp/Crm.ClientApp.Operations/Crm.Common/Crm.Common.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.Common/Crm.Common.csproj
@@ -104,6 +104,7 @@
     <Compile Include="EntityExtensions\CrmEntityExtensionCore.cs" />
     <Compile Include="EntityExtensions\CrmEntityExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\CrmQueryExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
