--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -141,6 +141,7 @@
     <Compile Include="CrmOperations\CRUDOperations\FetchXmlOperations.cs" />
     <Compile Include="CrmOperations\CRUDOperations\RetrieveMultipleOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\RetrieveMultipleUsingPagingOperation.cs" />
+    <Compile Include="CrmOperations\CRUDOperations\RetrieveWithRelatedDataOperation.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="CrmOperations\CrmOperationBase.cs" />
     <Compile Include="CrmOperations\ICrmOperation.cs" />
