#13 Update a record checking if row version matches

--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -136,6 +136,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrmOperations\ConcurrencyOperations\ConcurrencyOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\BasicCRUDOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\FetchXmlAggregationOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\FetchXmlOperations.cs" />
