--- a/ClientApp/Crm.ClientApp.Operations/Crm.Common/Crm.Common.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.Common/Crm.Common.csproj
@@ -101,6 +101,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Concurrency\CrmConcurrencyExtension.cs" />
     <Compile Include="EntityExtensions\CrmEntityExtensionCore.cs" />
     <Compile Include="EntityExtensions\CrmEntityExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,6 +111,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
