#14 add sample plugin to prevent the creation of order item if total amount exceed a limit; add executionTransactionRequest to create order and order item, and trigger the above plugin

--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrmOperations\BatchOperations\ExecuteMultipleOperation.cs" />
+    <Compile Include="CrmOperations\BatchOperations\ExecuteTransactionOperation.cs" />
     <Compile Include="CrmOperations\ConcurrencyOperations\ConcurrencyOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\BasicCRUDOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\FetchXmlAggregationOperation.cs" />
