#15 add code for Pre and Post Delete event, using SharedVariable

--- a/Plugins/Crm.Plugin.Business/Crm.Plugin.Business/Crm.Plugin.Business.csproj
+++ b/Plugins/Crm.Plugin.Business/Crm.Plugin.Business/Crm.Plugin.Business.csproj
@@ -99,6 +99,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityManagement\AllEntities\PostDeleteOperation.cs" />
+    <Compile Include="EntityManagement\AllEntities\PreDeleteOperation.cs" />
     <Compile Include="EntityManagement\Order\OrderMaxAmountCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
