#18 add code using CrmServiceClient.DiscoverGlobalOrganizations - update CrmSdk Pacakge Version - add "discoveryServiceUri" in Json Config file and relevant Class - refactor CrmConfigHelper so that CrmConfig can be returned

--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/crmConfigs.example.json
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/crmConfigs.example.json
@@ -1,6 +1,7 @@
 ﻿{
   "crmUrl": "",
   "crmAppId": "",
+  "discoveryServiceUri": "https://globaldisco.crm.dynamics.com/api/discovery/v2.0/Instances",
   "userName": "",
   "userPwd": "",
   "redirectUri": "https://login.microsoftonline.com/common/oauth2/nativeclient",
