--- a/ClientApp/Crm.ClientApp.Operations/Crm.Common.CrmServiceHelper/Crm.Common.CrmService.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.Common.CrmServiceHelper/Crm.Common.CrmService.csproj
@@ -84,6 +84,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
