--- a/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
+++ b/ClientApp/Crm.ClientApp.Operations/Crm.ClientApp.Operations/Crm.ClientApp.Operations.csproj
@@ -147,6 +147,7 @@
     <Compile Include="CrmOperations\CRUDOperations\RetrieveMultipleUsingPagingOperation.cs" />
     <Compile Include="CrmOperations\CRUDOperations\RetrieveWithRelatedDataOperation.cs" />
     <Compile Include="CrmOperations\OrganizationOperations\OrganizationOperation.cs" />
+    <Compile Include="CrmOperations\SecurityOperations\FieldSecurityOperation.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="CrmOperations\CrmOperationBase.cs" />
     <Compile Include="CrmOperations\ICrmOperation.cs" />
